# ootp-diamond-app

./: .gitignore  CLAUDE.md  Diamond.vbs  Makefile  api.bat  dev.bat  kill-stale.bat  pyproject.toml  web.bat
docs/: BACKLOG.md  DATA_NOTES.md  DATA_QUIRKS.md  DECISIONS.md  DESKTOP.md  DEV.md  METABASE.md  PROJECT_STATUS.md  SCHEMA.md  UI_DESIGN.md
scripts/: build_desktop.py  generate_types.py  inventory_l0_coverage.py  smoke_l0.py  smoke_warehouse.py  xstats_3d.py  xstats_eda.py
src/diamond/: __init__.py  awards.py  cli.py  config.py  constants.py  draft.py  glossary.py  history.py  hof.py  league_constants.py  mlb_teams.py  records.py  saves.py  streaks.py
src/diamond/advanced/: __init__.py  approach.py  contact.py  defensive.py  enriched.py  league_constants.py  sabermetric.py  situational.py
src/diamond/ai/: __init__.py  client.py  settings.py  tools.py
src/diamond/ai/adapters/: __init__.py  anthropic.py  openai.py
src/diamond/api/: __init__.py  app.py  metabase.py  warehouse.py
src/diamond/api/routes/: __init__.py  admin.py  ai.py  awards.py  batted_balls.py  chart_builder.py  cockpit.py  compare.py  draft.py  glossary.py  health.py  hof.py  leaderboards.py  movements.py  parks.py  photos.py  players.py  pressure.py  recent.py  records.py  roster.py  save.py  saves.py  standings.py  streaks.py  trajectory.py
src/diamond/api/schemas/: __init__.py  admin.py  ai.py  awards.py  batted_balls.py  chart_builder.py  chat.py  cockpit.py  compare.py  contract.py  draft.py  glossary.py  health.py  hof.py  leaderboards.py  movements.py  parks.py  player.py  pressure.py  recent.py  records.py  roster.py  save.py  saves.py  standings.py  streaks.py  trajectory.py
src/diamond/audit/: __init__.py  advanced.py  coverage.py  decode.py  decode_codes.py  reconcile.py
src/diamond/desktop/: __init__.py  __main__.py  diamond.spec  launcher.py  paths.py  sidecar.py  single_instance.py  splash.py  tray.py  win_jobobject.py
src/diamond/desktop/assets/: .gitkeep  splash.html
src/diamond/dictionary/: __init__.py  _stats.py
src/diamond/schema/: __init__.py  build.py  invariants.py  l0.py  l1_event.py  l1_machinery.py  l1_reference.py  l1_snapshot.py  l2.py  l2_game_grain.py  l2_history.py  l2_ootp.py  l3.py  l3_advanced.py  l3_leverage.py  l_ie.py  l_ref.py
web/: .env.local.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/explore/: page.tsx
web/app/explore/compare/: page.tsx
web/app/explore/ev-la/: page.tsx
web/app/explore/leaderboards/: page.tsx
web/app/explore/spray/: page.tsx
web/app/glossary/: page.tsx
web/app/glossary/[id]/: page.tsx
web/app/history/: page.tsx
web/app/history/awards/: page.tsx
web/app/history/draft/: page.tsx
web/app/history/hof/: page.tsx
web/app/history/records/: page.tsx
web/app/history/streaks/: page.tsx
web/app/league/: page.tsx
web/app/league/compare/: page.tsx
web/app/league/leaderboards/: page.tsx
web/app/movements/: page.tsx
web/app/player/[id]/: page.tsx
web/app/pressure/: page.tsx
web/app/roster/: page.tsx
web/app/settings/: page.tsx
web/app/settings/ai/: page.tsx
web/app/settings/save/: page.tsx
web/app/world/: page.tsx
web/components/: AISettingsForm.tsx  AISidebar.tsx  AISummarizeButton.tsx  CareerArc.tsx  ChartBuilderClient.tsx  EvLaScatter.tsx  ExploreModeTabs.tsx  FormulaBlock.tsx  LeaderboardClient.tsx  MetabaseWorkshop.tsx  PagePayloadProvider.tsx  PlayerAvatar.tsx  PlayerContractCard.tsx  PlayerStatsTab.tsx  PlayerTabNav.tsx  QuitButton.tsx  RecentFormPanel.tsx  RefreshButton.tsx  RosterClient.tsx  SaveSwitcher.tsx  Sparkline.tsx  SprayChart.tsx  StadiumSprayChart.tsx  TabStub.tsx  TeamLogo.tsx  ThemeSwitcher.tsx
web/components/ai/: MarkdownMessage.tsx
web/lib/: ai-chat.ts  api.ts  heatscale.ts  stadiums.ts  useElementWidth.ts
web/lib/types/: api.ts
