[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diamond"
version = "0.1.0"
description = "OOTP 27 monthly-dump warehouse and analysis app"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    # pybaseball wraps Lahman + Baseball Savant (Statcast) + FanGraphs.
    # Used by `diamond fetch-history` to populate the history_lahman_*
    # and history_statcast_* L0-shaped tables. pulls in pandas/numpy as
    # transitive deps.
    "pybaseball>=2.2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
diamond = "diamond.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/diamond"]
