[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diamond"
version = "0.1.0"
description = "OOTP 27 monthly-dump warehouse and analysis app"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    # pybaseball wraps Lahman + Baseball Savant (Statcast) + FanGraphs.
    # Used by `diamond fetch-history` to populate the history_lahman_*
    # and history_statcast_* L0-shaped tables. pulls in pandas/numpy as
    # transitive deps.
    "pybaseball>=2.2.7",
    # FastAPI backend per Decision D16 — serves the typed HTTP API the
    # Next.js frontend consumes. uvicorn is the ASGI runner; httptools
    # accelerates request parsing on Windows.
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # AI overlay (D14) — cross-platform OS keyring for API-key
    # storage; httpx for provider HTTP calls (Anthropic / OpenAI).
    # No provider SDKs to keep the adapter layer swap-friendly.
    "keyring>=25.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    # pydantic-to-typescript drives the `make types` step that
    # generates `web/lib/types/api.ts` from the Pydantic schemas in
    # `src/diamond/api/schemas/`. Pulls in `json2ts` as a Node
    # peer-dep — install via `pnpm install` in `web/`.
    "pydantic-to-typescript>=2.0.0",
]

[project.scripts]
diamond = "diamond.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/diamond"]
