[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diamond"
version = "0.1.0"
description = "OOTP 27 monthly-dump warehouse and analysis app"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    # pybaseball wraps Lahman + Baseball Savant (Statcast) + FanGraphs.
    # Used by `diamond fetch-history` to populate the history_lahman_*
    # and history_statcast_* L0-shaped tables. pulls in pandas/numpy as
    # transitive deps.
    "pybaseball>=2.2.7",
    # FastAPI backend per Decision D16 — serves the typed HTTP API the
    # Next.js frontend consumes. uvicorn is the ASGI runner; httptools
    # accelerates request parsing on Windows.
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # AI overlay (D14) — cross-platform OS keyring for API-key
    # storage; httpx for provider HTTP calls (Anthropic / OpenAI).
    # No provider SDKs to keep the adapter layer swap-friendly.
    "keyring>=25.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    # pydantic-to-typescript drives the `make types` step that
    # generates `web/lib/types/api.ts` from the Pydantic schemas in
    # `src/diamond/api/schemas/`. Pulls in `json2ts` as a Node
    # peer-dep — install via `pnpm install` in `web/`.
    "pydantic-to-typescript>=2.0.0",
]
# Desktop shell (D32) — native PySide6 window wrapping FastAPI
# (in-process uvicorn thread) + Next.js standalone sidecar. Hidden
# children, single-instance lock, Job Object lifecycle. PyInstaller
# bundles into one Diamond.exe; pystray + Pillow give the tray icon.
#
# We use PySide6 (Qt6) directly rather than pywebview because:
#   1. pywebview pulls `pythonnet` as a hard Windows base dep, which
#      has no Python 3.14 wheel (and won't build from source without
#      the .NET toolchain).
#   2. Qt brings its own Chromium (QtWebEngine) — eliminates the
#      "user must install Microsoft WebView2 runtime" dependency
#      that pywebview's edgechromium backend would have imposed.
#   3. PySide6 ships an `abi3` wheel that works across Python 3.10+
#      (3.14 included) without per-version build dance.
#   4. Direct Qt API gives us native menus, tray, splash — no
#      pywebview indirection, no "what backend is this picking?".
# Trade-off: ~80MB more in the bundle vs an equivalent pywebview
# bundle. Acceptable for a desktop app that already needs Node +
# Python on disk.
desktop = [
    "PySide6>=6.8.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "pyinstaller>=6.10.0",
]

[project.scripts]
diamond = "diamond.cli:app"
diamond-desktop = "diamond.desktop.launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diamond"]
